--- a/students_alcohol.ipynb
+++ b/students_alcohol.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "31ef4343",
+   "id": "9e5e3ddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,20 +17,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ba08a4",
+   "id": "890866bc",
    "metadata": {},
    "source": [
     "## Questions:\n",
     "- ¿Afecta el consumo de alcohol al fracaso escolar?\n",
     "- ¿Vivir en entorno urbano/rural tiene relación con el consumo de alcohol?\n",
     "- ¿La educación de los padres tiene alguna relación con el consumo de alcohol y el fracaso escolar?\n",
-    "- ¿CUAL ES EL PERFIL DE ESTUDIANTE BEBEDORRRRR?"
+    "- ¿CUAL ES EL PERFIL DE ESTUDIANTE BEBEDORRRRR? (combinación de motivos por el cual beben. Está normalizado beber y no depende de nada?)\n",
+    "- Es beber un acto social o derivado de otras causas? ( revisar columna going out with friends)\n",
+    "- Beber afecta más al aprendizaje de matematicas o de lengua¿? (distintas regiones del cerebro¿?)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e27fb7d",
+   "id": "8c9c78d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9bbba51",
+   "id": "5a85f496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e4276f0",
+   "id": "b26a9abe",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34a79d51",
+   "id": "18e6c85f",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8df8bd24",
+   "id": "f56f360c",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "32eff8ca",
+   "id": "c07e3c77",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fa515a70",
+   "id": "82d050a6",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39c5448",
+   "id": "203b47c9",
    "metadata": {},
    "outputs": [],
    "source": []
