--- a/students_alcohol.ipynb
+++ b/students_alcohol.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "45caaea1",
+   "id": "0fb46076",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86aa9d29",
+   "id": "502fcd5a",
    "metadata": {},
    "source": [
     "## Questions:\n",
     "- ¿Afecta el consumo de alcohol al fracaso escolar?\n",
-    "- ¿Vivir en entorno urbano/rural tiene relación con el consumo de alcohol?\n",
+    "- ¿Vivir en entorno urbano/rural tiene relación con el consumo de alcohol? (A priori no afecta)\n",
     "- ¿La educación de los padres tiene alguna relación con el consumo de alcohol y el fracaso escolar?\n",
     "- ¿CUAL ES EL PERFIL DE ESTUDIANTE BEBEDORRRRR? (combinación de motivos por el cual beben. Está normalizado beber y no depende de nada?)\n",
     "- Es beber un acto social o derivado de otras causas? ( revisar columna going out with friends)\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2bb4163e",
+   "id": "faac108e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1d277a7a",
+   "id": "6d94b4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4d553320",
+   "id": "38c5f002",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a2d2444",
+   "id": "fde74d67",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b348b66",
+   "id": "597269e0",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "414912b7",
+   "id": "f5400adc",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ee93fe24",
+   "id": "9d44820b",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71402e0",
+   "id": "6309f0ca",
    "metadata": {},
    "source": [
     "### Merging both dataframes"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2b4b2ce1",
+   "id": "bc1637f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "79e0c48f",
+   "id": "8bf4cded",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6b4ba74a",
+   "id": "e3af71fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c6a4e752",
+   "id": "7a2fcb18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54727fd",
+   "id": "7699966b",
    "metadata": {},
    "source": [
     "### Checking new dataframe"
@@ -532,8 +532,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "69a98a47",
+   "execution_count": 40,
+   "id": "bec11c1a",
    "metadata": {},
    "outputs": [
     {
@@ -701,99 +701,349 @@
        "      <td>10</td>\n",
        "      <td>Math</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>16</td>\n",
+       "      <td>U</td>\n",
+       "      <td>LE3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>services</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>16</td>\n",
+       "      <td>U</td>\n",
+       "      <td>LE3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>F</td>\n",
+       "      <td>17</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>other</td>\n",
+       "      <td>teacher</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>LE3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>services</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>F</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>teacher</td>\n",
+       "      <td>health</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>F</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>services</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>LE3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>health</td>\n",
+       "      <td>services</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>T</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>teacher</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>GP</td>\n",
+       "      <td>M</td>\n",
+       "      <td>15</td>\n",
+       "      <td>U</td>\n",
+       "      <td>GT3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
+       "<p>15 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...  \\\n",
-       "0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...   \n",
-       "1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n",
-       "2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n",
-       "3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n",
-       "4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n",
+       "   school sex  age address famsize Pstatus  Medu  Fedu      Mjob      Fjob  \\\n",
+       "0      GP   F   18       U     GT3       A     4     4   at_home   teacher   \n",
+       "1      GP   F   17       U     GT3       T     1     1   at_home     other   \n",
+       "2      GP   F   15       U     LE3       T     1     1   at_home     other   \n",
+       "3      GP   F   15       U     GT3       T     4     2    health  services   \n",
+       "4      GP   F   16       U     GT3       T     3     3     other     other   \n",
+       "5      GP   M   16       U     LE3       T     4     3  services     other   \n",
+       "6      GP   M   16       U     LE3       T     2     2     other     other   \n",
+       "7      GP   F   17       U     GT3       A     4     4     other   teacher   \n",
+       "8      GP   M   15       U     LE3       A     3     2  services     other   \n",
+       "9      GP   M   15       U     GT3       T     3     4     other     other   \n",
+       "10     GP   F   15       U     GT3       T     4     4   teacher    health   \n",
+       "11     GP   F   15       U     GT3       T     2     1  services     other   \n",
+       "12     GP   M   15       U     LE3       T     4     4    health  services   \n",
+       "13     GP   M   15       U     GT3       T     4     3   teacher     other   \n",
+       "14     GP   M   15       U     GT3       A     2     2     other     other   \n",
        "\n",
-       "  freetime goout  Dalc  Walc  health absences  G1  G2  G3 asignatura  \n",
-       "0        3     4     1     1       3        6   5   6   6       Math  \n",
-       "1        3     3     1     1       3        4   5   5   6       Math  \n",
-       "2        3     2     2     3       3       10   7   8  10       Math  \n",
-       "3        2     2     1     1       5        2  15  14  15       Math  \n",
-       "4        3     2     1     2       5        4   6  10  10       Math  \n",
+       "    ... freetime goout  Dalc  Walc  health absences  G1  G2  G3 asignatura  \n",
+       "0   ...        3     4     1     1       3        6   5   6   6       Math  \n",
+       "1   ...        3     3     1     1       3        4   5   5   6       Math  \n",
+       "2   ...        3     2     2     3       3       10   7   8  10       Math  \n",
+       "3   ...        2     2     1     1       5        2  15  14  15       Math  \n",
+       "4   ...        3     2     1     2       5        4   6  10  10       Math  \n",
+       "5   ...        4     2     1     2       5       10  15  15  15       Math  \n",
+       "6   ...        4     4     1     1       3        0  12  12  11       Math  \n",
+       "7   ...        1     4     1     1       1        6   6   5   6       Math  \n",
+       "8   ...        2     2     1     1       1        0  16  18  19       Math  \n",
+       "9   ...        5     1     1     1       5        0  14  15  15       Math  \n",
+       "10  ...        3     3     1     2       2        0  10   8   9       Math  \n",
+       "11  ...        2     2     1     1       4        4  10  12  12       Math  \n",
+       "12  ...        3     3     1     3       5        2  14  14  14       Math  \n",
+       "13  ...        4     3     1     2       3        2  10  10  11       Math  \n",
+       "14  ...        5     2     1     1       3        0  14  16  16       Math  \n",
        "\n",
-       "[5 rows x 34 columns]"
+       "[15 rows x 34 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_both.head(5)"
+    "df_mat.head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "75313650",
+   "execution_count": 44,
+   "id": "583d54ce",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1044 entries, 0 to 648\n",
-      "Data columns (total 34 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   school      1044 non-null   object\n",
-      " 1   sex         1044 non-null   object\n",
-      " 2   age         1044 non-null   int64 \n",
-      " 3   address     1044 non-null   object\n",
-      " 4   famsize     1044 non-null   object\n",
-      " 5   Pstatus     1044 non-null   object\n",
-      " 6   Medu        1044 non-null   int64 \n",
-      " 7   Fedu        1044 non-null   int64 \n",
-      " 8   Mjob        1044 non-null   object\n",
-      " 9   Fjob        1044 non-null   object\n",
-      " 10  reason      1044 non-null   object\n",
-      " 11  guardian    1044 non-null   object\n",
-      " 12  traveltime  1044 non-null   int64 \n",
-      " 13  studytime   1044 non-null   int64 \n",
-      " 14  failures    1044 non-null   int64 \n",
-      " 15  schoolsup   1044 non-null   object\n",
-      " 16  famsup      1044 non-null   object\n",
-      " 17  paid        1044 non-null   object\n",
-      " 18  activities  1044 non-null   object\n",
-      " 19  nursery     1044 non-null   object\n",
-      " 20  higher      1044 non-null   object\n",
-      " 21  internet    1044 non-null   object\n",
-      " 22  romantic    1044 non-null   object\n",
-      " 23  famrel      1044 non-null   int64 \n",
-      " 24  freetime    1044 non-null   int64 \n",
-      " 25  goout       1044 non-null   int64 \n",
-      " 26  Dalc        1044 non-null   int64 \n",
-      " 27  Walc        1044 non-null   int64 \n",
-      " 28  health      1044 non-null   int64 \n",
-      " 29  absences    1044 non-null   int64 \n",
-      " 30  G1          1044 non-null   int64 \n",
-      " 31  G2          1044 non-null   int64 \n",
-      " 32  G3          1044 non-null   int64 \n",
-      " 33  asignatura  1044 non-null   object\n",
-      "dtypes: int64(16), object(18)\n",
-      "memory usage: 285.5+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0       no\n",
+       "1      yes\n",
+       "2      yes\n",
+       "3      yes\n",
+       "4       no\n",
+       "      ... \n",
+       "644    yes\n",
+       "645    yes\n",
+       "646     no\n",
+       "647    yes\n",
+       "648    yes\n",
+       "Name: internet, Length: 649, dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_both.info()"
+    "df_por['internet']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4fcfd5e8",
+   "id": "bee4bc1e",
+   "metadata": {},
+   "source": [
+    "## assigning \"both\" to students enroled to both classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95895002",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03be8e66",
    "metadata": {},
    "source": [
     "### There is no succes/failure column. We have to create it by calculating the            G1+G2+G3 > 30"
@@ -802,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5c748d5e",
+   "id": "da861ca1",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6909f87e",
+   "id": "a355a6f4",
    "metadata": {},
    "outputs": [],
    "source": []
